src/objects/c2g__codaPaymentMediaDetail__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppayment</customHelpPage>
    <description>Holds information for payment transmission including transaction and transaction line information.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PaymentMediaDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentDate__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentDescription__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentNumber__c</fullName>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentType__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Purchase Invoice</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Purchase Credit Note</fullName>
                </value>
                <value>
                    <fullName>Cash Matching Journal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OriginalValue__c</fullName>
        <label>Original Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OutstandingValue__c</fullName>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payment Media Details (Company)</relationshipLabel>
        <relationshipName>PaymentMediaDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PartialPaymentValue__c</fullName>
        <label>Partial Payment Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMediaSummary__c</fullName>
        <label>Payment Media Summary</label>
        <referenceTo>c2g__codaPaymentMediaSummary__c</referenceTo>
        <relationshipLabel>Payment Media Details</relationshipLabel>
        <relationshipName>PaymentMediaDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <formula>IF (ISBLANK(c2g__PartialPaymentValue__c) ,   c2g__OriginalValue__c  -  c2g__Discount__c,   c2g__PartialPaymentValue__c)</formula>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionNumber__c</fullName>
        <label>Transaction Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VendorReference__c</fullName>
        <label>Vendor Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__Reference__c</fullName>
        <formula>if( c2g__PaymentMediaSummary__r.c2g__PaymentMediaControl__r.c2g__Payment__r.c2g__PaymentTypes__c = &quot;Payments&quot;,
c2g__VendorReference__c ,  c2g__DocumentNumber__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_prt__Payable_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Invoice</label>
        <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Payment Media Details</relationshipLabel>
        <relationshipName>Payment_Media_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Media Detail</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Media Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Media Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>